Fixed zip code wrapping, static width and height of pet images

--- a/src/components/pets/pets.css
+++ b/src/components/pets/pets.css
@@ -1,40 +1,44 @@
 .pet__container {
-	text-align: center;
+  text-align: center;
 }
 
 .pet__container img {
-	width: 100%;
-	margin-bottom: 20px;
-	margin-top: 20px;
+  width: 100%;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .petList__container {
-	text-align: center;
-	display: grid;
-	place-items: center;
+  text-align: center;
+  display: grid;
+  place-items: center;
 }
 .petList__column {
-	margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .pet__button {
-	bottom: 0;
+  bottom: 0;
 }
 
 .petInfo {
-	margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .petInfo img {
-	margin-left: auto;
-	margin-right: auto;
-	width: 69%;
-	display: block;
-	position: relative;
-	margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 69%;
+  display: block;
+  position: relative;
+  margin-bottom: 20px;
 }
 
 .card-img-top {
-	height: 300px;
-	width: 100%;
+  height: 300px;
+  width: 100%;
+}
+
+.inputContainer {
+  flex: 1;
 }
